# learn-cmake

part1&2/: CMakeLists.txt  main.cpp
part3/: CMakeLists.txt
part3/src/: main.cpp
part4/: CMakeLists.txt
part4/other/: CMakeLists.txt
part4/other/src/: main.cpp
part4/src/: main.cpp
part5/: CMakeLists.txt
part5/helpers/: CMakeLists.txt  math_utils.h
part5/src/: main.cpp
